<resources>
    <string name="app_name">Habit Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sign up Fragment -->
    <string name="sing_up">Sing up</string>
    <string name="email">Email</string>
    <string name="password">Password\n</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Full name</string>
    <string name="subtitle">Create your account and begin building powerful habits.</string>

    <!-- Login Fragment -->
    <string name="already">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_the_password">Forgot the password?</string>

    <!-- Menu -->
    <string name="title">Habit Tracker</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_new_habit">Add new habit.</string>
    <string name="settings">Configuration</string>
    <string name="open_settings">Open settings screen.</string>
    <string name="user_information">User information</string>
    <string name="open_user_information">Open user information.</string>
    <string name="information_wrong">The email and/or password entered are incorrect. Please try again.</string>

    <!-- Add Edit Fragment -->
    <string name="create_your_new_habit">Create your new habit.</string>

</resources>